--- a/cats.css
+++ b/cats.css
@@ -6,9 +6,9 @@
 }
 
 #cats > div {
-    background: #f9f9f9;
+    background: white;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px black;
     padding: 15px;
     text-align: center;
 }
